# zeroproxy

./: .gitignore  .golangci.yml  AGENTS.md  ARCHITECTURE.md  LICENSE  PHASE2_PLAN.md  PHASE3_PLAN.md  PHASE4_PLAN.md  PLAN.md  README.md  biome.jsonc  go.mod  go.sum  package-lock.json  package.json
.github/workflows/: ci.yml
cmd/wasm-kernel/: challenge.go  challenge_test.go  main.go
cmd/zeroproxy-server/: main.go  relay_test.go  routing_test.go
docs/cloudflare-turnstile/: README.md
internal/cookiejar/: jar.go  jar_freeze_test.go  jar_test.go
internal/headers/: policy.go  policy_freeze_test.go  policy_oracle_test.go  policy_test.go
internal/htmltx/: srcdoc.go  topbar.go  transform.go  transform_diff_test.go  transform_streamdiff_test.go  transform_test.go
internal/http1/: http2_test.go  keepalive_test.go  redirect.go  roundtrip.go  roundtrip_test.go  streaming_test.go
internal/runtimeapi/: api.go
internal/shareurl/: shareurl.go  shareurl_test.go
internal/socks5/: client.go  client_test.go
internal/swhttp/: bridge_js.go  bridge_js_test.go  bridge_stub.go  response_writer.go  response_writer_test.go
internal/utlskernel/: dial.go  dial_test.go
internal/wsconn/: conn_js.go  conn_stub.go  relay.go
internal/wsproto/: client.go  client_test.go
internal/yamuxconn/: session.go  stream.go
internal/zphttp/: http2_test.go  keepalive_test.go  (+6 more)
rewriter-rs/: Cargo.toml  clippy.toml
rewriter-rs/src/: lib.rs
scripts/: build.mjs  test.mjs  turnstile-live.mjs
web/: index.html  js-rewriter.js  runtime-prelude.js  sw.js  worker-prelude.js  zp-core.js
(+11 files in other folders)
