[package]
name = "zp-rewriter"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
oxc_allocator = "0.60"
oxc_ast = "0.60"
oxc_parser = "0.60"
oxc_span = "0.60"
oxc_syntax = "0.60"
swc_common = "23.0.0"
swc_css_ast = "23.0.0"
swc_css_codegen = "23.0.0"
swc_css_parser = "23.0.0"
swc_css_visit = "23.0.0"
url = "2.5"
wasm-bindgen = "0.2"
